@@ -79,25 +79,6 @@ catch (PDOException $e)
 $dbxlink->setAttribute(PDO::ATTR_ERRMODE, PDO::ERRMODE_EXCEPTION);
 $dbxlink->exec ("set names 'utf8'");
 
-if (get_magic_quotes_gpc())
-	foreach ($_REQUEST as $key => $value)
-		if (gettype ($value) == 'string')
-			$_REQUEST[$key] = stripslashes ($value);
-
-
-if(version_compare(PHP_VERSION, '5.3.0', '<')) {
-	if (!set_magic_quotes_runtime (0))
-	{
-		throw new RuntimeException('Failed to turn magic quotes off');
-	}
-} else {
-	if (!ini_set("magic_quotes_runtime", 0))
-	{
-		throw new RuntimeException('Failed to turn magic quotes off');
-	}
-}	
-
-
 // Escape any globals before we ever try to use them, but keep a copy of originals.
 $sic = array();
 foreach ($_REQUEST as $key => $value)
